# sdltetris

./: .gitignore  CMakeLists.txt  README.md  tetris.c
include/: config.h  game.h
src/: collision.c  delrow.c  initialize.c  tetris.c
